* thread: updated default virtual thread scheduler parallelism to at least 16   > jdbc is not fully supported virtual thread yet, allow more virtual thread unfriendly tasks to run parallel
Signed-off-by: neo <1100909+neowu@users.noreply.github.com>